# linkedin_request_connection

./: .env.example  CONNECTION_REQUEST_GUIDE.md  FINAL_SUMMARY.md  HOW_IT_WORKS.md  QUICK_START.md  README.md  TEST_RESULTS.md  USAGE_GUIDE.md  WHATS_NEW.md  app.py  pyproject.toml  run_app.sh  test_login.py  verify_credentials.py
screenshots/: README.md
src/linkedin_msg/: crew.py  main.py  main_async.py
src/linkedin_msg/config/: agents.yaml  tasks.yaml
src/linkedin_msg/tools/: linkedin_automation_tool.py
